[tool.poetry]
name = "expecttest"
version = "0.2.1"
description = ""
readme = "README.md"
repository = "https://github.com/ezyang/expecttest"
authors = ["Edward Z. Yang <ezyang@mit.edu>"]
include = ["expecttest/py.typed"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3"
hypothesis = "^6"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
strict_optional = true
show_column_numbers = true
show_error_codes = true
warn_no_return = true
disallow_any_unimported = true

# --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false # purposely disabled
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
